--- a/package.json
+++ b/package.json
@@ -1,46 +1,38 @@
 {
   "name": "graphlib",
-  "version": "2.1.9-pre",
+  "version": "0.0.0",
   "description": "A directed and undirected multi-graph library",
-  "author": "Chris Pettitt <cpettitt@gmail.com>",
+  "author": "Daniel Kallin <daniel.kallin@gmail.com>",
   "license": "MIT",
   "main": "index.js",
+  "types": "decl",
   "files": [
     "index.js",
-    "dist/",
-    "lib/"
+    "dist/"
   ],
   "keywords": [
     "graph",
     "algorithms"
   ],
-  "dependencies": {
-    "lodash": "4.17.19"
+  "scripts": {
+    "prepare": "tsc && rollup -c && mocha --recursive",
+    "test": "mocha --recursive"
   },
+  "dependencies": {},
   "devDependencies": {
-    "benchmark": "2.1.4",
-    "browserify": "16.5.1",
-    "chai": "4.2.0",
-    "eslint": "7.4.0",
-    "jshint": "2.11.1",
-    "jshint-stylish": "2.2.1",
-    "karma": "5.1.0",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-firefox-launcher": "1.3.0",
-    "karma-mocha": "2.0.1",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-requirejs": "1.1.0",
-    "karma-safari-launcher": "1.0.0",
-    "mocha": "8.0.1",
-    "phantomjs-prebuilt": "2.1.16",
-    "requirejs": "2.3.6",
-    "seedrandom": "3.0.5",
-    "semver": "7.3.2",
-    "sprintf": "0.1.5",
-    "uglify-js": "3.10.0"
+    "benchmark": "^2.1.4",
+    "chai": "^4.2.0",
+    "lodash": "^4.17.20",
+    "mocha": "^8.2.0",
+    "rollup": "^2.32.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "seedrandom": "^3.0.5",
+    "sprintf": "^0.1.5",
+    "terser": "^5.3.5",
+    "typescript": "^4.0.3"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dagrejs/graphlib.git"
+    "url": "https://github.com/skanaar/graphlib.git"
   }
 }
